parser/tests/snapshots/errors__for_no_in.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse `for` statement
  ┌─ for_no_in:1:6
  │
1 │ for x:
  │      ^ Unexpected token. Expected `in`


